--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
 
+springdoc:
+  swagger-ui:
+    path: "/swagger-ui.html"
+
+org:
+  jobrunr:
+    dashboard:
+      enabled: true
+    background-job-server:
+      enabled: true
